--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button type="submit" id="loginBtn">Login</button>
     </form>
     <p class="login_description">
-      pssstttt, usernamenya isi "user" dan passwordnya sama dengan usernamenya ya
+      pssstttt, usernamenya isi "ayang" dan passwordnya "akak" ya..
     </p>
   </div>
 </body>
